# iban_beaver

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  TODO.md  diesel.toml  docker-compose.yml
.github/workflows/: docker-image.yml  docker-publish.yml  rust.yml
migrations/2021-06-19-110141_t_DE/: down.sql  up.sql
migrations/2021-06-22-121809_blacklist/: down.sql  up.sql
migrations/2021-06-23-142617_t_at/: down.sql  up.sql
migrations/2021-06-25-173653_all_tables/: down.sql  up.sql
resources/: README.md  blz-aktuell-xls-data.xlsx  db.sqlite3  de-data-download.xlsx
src/: db.rs  iban.rs  interface.rs  lib.rs  main.rs
src/country/: at.rs  be.rs  de.rs  mod.rs  nl.rs  schema.rs
src/db/: at.rs  de.rs  mod.rs  models.rs  schema.rs
src/iban/: at.rs  de.rs  mod.rs
