[package]
name = "iban_beaver"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.18"
diesel = { version = "1.4.7", features = ["sqlite"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] } # warp needs tokio
warp = "0.3"
curl = "0.4"