[package]
name = "iban_beaver"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.18" # excelsheet -- german (DE) data format
csv = "1.1" # csv -- austrain (AT) data format
curl = "0.4"
diesel = { version = "1.4.7", features = ["sqlite"] }
dotenv = "0.15"
iban_validate = "4"
serde = { version = "1.0", features = ["derive"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_okapi = { version = "0.8.0-rc.1", features = ["swagger"] }
schemars = "0.8.8" # needed by okapi

[dev-dependencies]
serial_test = "0.6.0"
